# orgpulse

./: .gitignore  README.md  pyproject.toml
assets/brand/: README.md
scripts/: generate_manual_org_dashboard.py  render_manual_org_dashboard.py
src/orgpulse/: __init__.py  __main__.py  analysis.py  cli.py  config.py  dashboard.py  distribution.py  errors.py  files.py  github_auth.py  github_types.py  ingestion.py  manual_dashboard.py  metrics.py  models.py  output.py  raw_snapshot_source.py  visualization.py
src/orgpulse/reporting/: __init__.py  analysis_export.py  analysis_report.py  contracts.py  dashboard_html.py  run_outputs.py
src/orgpulse/templates/: analysis_report.html.j2  manual_org_dashboard.html.j2  org_dashboard.html.j2
src/orgpulse/templates/org_dashboard/: _app.js.j2  (+3 more)
src/orgpulse/types/: __init__.py  github.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_analyze.py  test_cli_dashboard.py  test_cli_run_command.py  test_cli_run_config.py  test_github_auth.py  test_ingestion.py  test_metrics.py  test_output.py  test_output_local_source.py  test_output_manifest.py  test_output_manual_dashboard.py  test_output_org_summary.py  test_output_repo_summary.py  test_output_reporting.py
tests/cli/: test_analyze.py  test_dashboard.py  test_run_command.py  test_run_config.py
tests/helpers/: cli.py  dashboard_source.py  mocks.py  output.py
tests/output/: test_local_source.py  test_manifest.py  test_manual_dashboard.py  test_org_summary.py  test_repo_summary.py  test_reporting.py
tests/support/: __init__.py  cli_support.py  output_support.py
(+2 files in other folders)
