[project]
name = "orgpulse"
version = "0.1.0"
description = "GitHub organization metrics snapshots and rollups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.11,<3",
  "PyGithub>=2.6,<3",
  "typer>=0.21,<1",
]

[project.scripts]
orgpulse = "orgpulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
